k8s/local/heroes-web.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name:  heroes-web-deployment
spec:
  paused: false
  revisionHistoryLimit: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  replicas: 2
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - image: snavarropino/heroesweb
        name: heroes-web
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 4200
        readinessProbe:
          httpGet:
             path: /
             port: 4200

---
apiVersion: v1
kind: Service
metadata:
  name: heroes-web-svc
  namespace: default
spec:
  type: NodePort
  selector:
    app: web
  ports:
  - name: http
    port: 4200
    targetPort: http
