k8s/local/heroes-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: heroes-ingress
  annotations: 
    nginx.ingress.kubernetes.io/affinity: cookie
spec:
  rules: 
  - host: heroes-api.com
    http:
      paths:
      - path: /
        backend:
          serviceName: heroes-api-svc
          servicePort: 80 
  - host: heroes-web.com
    http:
      paths:
      - path: /
        backend:
          serviceName: heroes-web-svc
          servicePort: 4200
